--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ mysql_port=3306
 database_name=magazine
 user=root
 password =root
-basePort=http://localhost:5000
+basePort=http://3.110.41.220:5000
 JWT_SECRET = prince12
